# cloud-cost-optimizer

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  rubrics.py
server/: app.py  environment.py
tasks/: __init__.py  task1_grader.py  task2_grader.py  task3_grader.py
tests/: test_contract.py
